<resources>
    <string name="app_name">MiAppVanessa</string>
    <string name="titulo">¡Bienvenido! Aprende Ingles</string>
    <string name="boton">Siguiente</string>
    <string name="botoncolores">Colores</string>
    <string name="botonanimales">Animales</string>
    <string name="botonfrutas">Frutas</string>
    <string name="botonnumeros">Numeros</string>
    <string name="menu">Menu</string>
    <string name="titulocolores">Colores</string>
    <string name="tituloanimales">Animales</string>
    <string name="titulofrutas">Frutas</string>
    <string name="titulonumeros">Numeros</string>
    <string name="botonvolver">Volver</string>
    <string name="textomanzana">Apple</string>
    <string name="textofresa">Strawberry</string>
    <string name="textouvas">Grapes</string>
    <string name="textoazul">Blue</string>
    <string name="textomorado">Purple</string>
    <string name="textorosado">Pink</string>
    <string name="textogato">Cat</string>
    <string name="textoperro">Dog</string>
    <string name="textoconejo">Rabbit</string>
    <string name="textonuno">One</string>
    <string name="textondos">Two</string>
    <string name="textontres">Three</string>

    <string name="botonaprender">Aprender 💡</string>
    <string name="botonjugar">Jugar  😼</string>

    <string name="tituloClic">Clic Para Escuchar La Pregunta</string>

    <string name="volvermenu">Volver al menú principal</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="felicidades2">Has terminado el juego</string>


    <string name="Aprendido">Aprendido</string>

    <string name="tituloingreso">INGRESO</string>

    <string name="nombre">Nombre:</string>
    <string name="nick">Nickname:</string>
    <string name="edad">Edad:</string>
    <string name="preguntarb">Genero:</string>
    <string name="colegio">Colegio:</string>
    <string name="enviar">Enviar</string>

    <string-array name="colegios">
        <item>Selecciona tu Colegio</item>
        <item>San Agustin</item>
        <item>Salesianas</item>
        <item>San Francisco</item>
        <item>Franciscanas</item>
        <item>Jose Eliecer</item>
        <item>La Milagrosa</item>
    </string-array>




</resources>