<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/fondo4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MenuApp">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:src="@drawable/menu"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/menu"
        android:layout_gravity="center"
        android:textSize="60sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
    />

    <Button
        android:id="@+id/btnColores"
        android:onClick="irColores"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/botoncolores"
        android:backgroundTint="@color/blue2"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
    />

    <CheckBox
        android:id="@+id/chxAprendido1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Aprendido"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnAnimales"
        android:onClick="irAnimales"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/botonanimales"
        android:backgroundTint="@color/purple2"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        />

    <CheckBox
        android:id="@+id/chxAprendido2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Aprendido"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnFrutas"
        android:onClick="irFrutas"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/botonfrutas"
        android:backgroundTint="@color/green2"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        />

    <CheckBox
        android:id="@+id/chxAprendido3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Aprendido"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnNumeros"
        android:onClick="irNumeros"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/botonnumeros"
        android:backgroundTint="@color/pink2"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        />

    <CheckBox
        android:id="@+id/chxAprendido4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Aprendido"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        >

        <Button
            android:onClick="volverMenu"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lila"
            android:text="@string/botonvolver"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            />



    </LinearLayout>

</LinearLayout>